# adventofrust

./: .gitignore  Cargo.toml  README.md
2020/1/: Cargo.toml
2020/1/benches/: bench.rs
2020/1/src/: lib.rs
2020/2/: Cargo.toml
2020/2/benches/: bench.rs
2020/2/src/: lib.rs
2020/4/: Cargo.toml
2020/4/benches/: bench.rs
2020/4/src/: lib.rs
2020/aoctemplate/: Cargo.toml
2020/aoctemplate/benches/: bench.rs
2020/aoctemplate/src/: lib.rs
examples/: templatemain.rs
src/: aoc.rs  day1.rs  lib.rs  main.rs  point2d.rs  prelude.rs  vecneighbor.rs
