[package]
name = "aoc202004"
version = "0.1.0"
authors = ["jw"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adventofcode = { path = "../.." }
anyhow = "^1.0.0"
itertools = "^0.9.0"
criterion = "^0.3"
lazy_static = "1.4.0"

[[bench]]
name = "bench"
harness = false
